--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ button{
     background-color: #CBFF8C;
 }
 
+.btnRow2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .wrapper * {
     margin-top: 20px;
 }
@@ -41,4 +47,16 @@ button{
 p{
     display: flex;
     flex-direction: row;
+}
+
+.flagOutput{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-weight: bold;
+}
+
+ol{
+    border-top: solid 2px black;
 }
